Fix horizontal scrolling on mobile devices
`<pre>` and `<code>` blocks were causing Chrome Mobile for Android version 35 under Android
version 4.1.2 (Samsung Galaxy SIII Mini) to add horizontal scrollbars to pages where
they were present.

Fix this by:

- making `<code>` elements display as inline blocks:
a) `inline-block` elements will not break apart as was happening prior to b08b53b
b) because `<code>` elements are displayed (at least by Chrome) as `inline`, setting the `overflow`
property has no effect

- setting the `overflow` property for `<pre>` block objects, which adds a horizontal scrollbar
beneath the element

--- a/css/main.css
+++ b/css/main.css
@@ -236,11 +236,14 @@ a:visited { color: #205caa; }
   font-size: 15px;
 }
 
-.post pre { margin: 15px 0; }
+.post pre {
+  margin: 15px 0;
+  overflow: auto;
+}
 
 .post code {
   padding: 1px 5px;
-  white-space: nowrap;
+  display: inline-block;
 }
 
 .post ul,
